<resources>
    <string name="app_name">Restaurant Table Booking App</string>
    <string name="LogIn">Log In</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="PasswordConfirm">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="Forgot">Forgot Password?</string>
    <string name="Register">Register For An Account</string>
    <string name="LoginFailed">Login Failed\nPlease Try Again</string>
    <string name="SignUpNow">Sign Up Now</string>
    <string name="RegisterMessage">Please fill in the details and create an account</string>
    <string name="MissingDetails">Please fill in all fields</string>
    <string name="PasswordMismatch">Passwords must match</string>
    <string name="UserAlreadyExists">An account for this email\nis already registered</string>
    <string name="NewUserCreated">New User Created</string>
    <string name="LoginSuccess">Login Successful</string>
    <string name="Welcome">Welcome</string>
    <string name="BookTable">Book A Table</string>
    <string name="ViewBookings">View Bookings</string>
    <string name="ViewTables">View Tables</string>
    <string name="GuestNumber">Number of Guests</string>
    <string name="TimeReservation">Time of Reservation</string>
    <string name="DateReservation">Date of Reservation</string>
    <string name="DatePicker">Date</string>
    <string name="Submit">Submit</string>
    <string name="PickDate">Please Pick A Date</string>
    <string name="BookingCreated">Booking Created</string>
    <string name="BookingCreatedMessage">Your Booking Has Been Created.\n\nA Member Of Staff Will Confirm The Booking Soon.\n\nPlease Check Your Booking Details For An Update.</string>
    <string name="Home">Home</string>
    <string name="YourBookings">Your Bookings</string>
    <string name="YourBookingsHeading">Your Bookings Will Appear Below.\nSelect A Booking To View Details Or Delete.</string>
    <string name="YourBookingDetails">Your Booking Details</string>
    <string name="Back">Back</string>
    <string name="Delete">Delete</string>
    <string name="DeleteSuccess">Booking Deleted</string>
    <string name="LogOut">Log Out</string>
    <string name="StaffBookings">Bookings</string>
    <string name="StaffBookingsHeading">Bookings Will Appear Below.\nSelect A Booking To View Details.</string>
    <string name="StaffBookingDetails">Booking Details</string>
    <string name="Update">Update</string>
    <string name="Confirm">Confirm</string>
    <string name="Deny">Deny</string>
    <string name="ConfirmBooking">Confirm Or Deny Booking?</string>
    <string name="UpdateSuccess">Update Successful</string>
    <string name="StaffViewTables">Tables</string>
    <string name="SelectReservedTime">Select A Reserved Time To View Details</string>
    <string name="Assign">Assign\nBooking</string>
    <string name="Create">Create\nBooking</string>
    <string name="UnassignedBookings">Bookings That Can Be Assigned To This Table</string>
    <string name="BookingAssigned">Booking Assigned Successfully</string>
    <string name="TimeReservationAvailable">Select An Available Time</string>
</resources>