<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffViewSelectedTable">

    <TextView
        android:id="@+id/StaffViewSelectedTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DateReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/DateReservation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaffViewSelectedTable" />


    <Button
        android:id="@+id/DatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:text="@string/DatePicker"
        android:onClick="onClickDatePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateReservation" />

    <TextView
        android:id="@+id/DateChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/PickDate"
        app:layout_constraintStart_toEndOf="@+id/DatePicker"
        app:layout_constraintTop_toTopOf="@+id/DatePicker" />

    <TextView
        android:id="@+id/StaffTimeReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DatePicker" />

    <ListView
        android:id="@+id/Lv_StaffTableBookings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@drawable/borderbox"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaffTimeReservation" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="onClickBack"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Lv_StaffTableBookings" />

    <Button
        android:id="@+id/Assign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Assign"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/Back"
        app:layout_constraintEnd_toStartOf="@+id/Create"
        app:layout_constraintStart_toEndOf="@+id/Back"
        android:onClick="onClickAssign"/>

    <Button
        android:id="@+id/Create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickCreate"
        android:text="@string/Create"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/Assign"
        app:layout_constraintEnd_toEndOf="@+id/Lv_StaffTableBookings" />

</androidx.constraintlayout.widget.ConstraintLayout>