<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffCreateBooking">


    <TextView
        android:id="@+id/BookTableNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GuestNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GuestNumber"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BookTableNum" />

    <Spinner
        android:id="@+id/GuestNumberChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="5dp"
        android:background="@drawable/bg_spinner"
        android:entries="@array/GuestNumberChoice"
        app:layout_constraintTop_toBottomOf="@+id/GuestNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/DateReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/DateReservation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GuestNumberChoice" />


    <Button
        android:id="@+id/DatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:text="@string/DatePicker"
        android:onClick="onClickDatePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateReservation" />

    <TextView
        android:id="@+id/DateChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/PickDate"
        app:layout_constraintStart_toEndOf="@+id/DatePicker"
        app:layout_constraintTop_toTopOf="@+id/DatePicker" />

    <TextView
        android:id="@+id/TimeReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimeReservationAvailable"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DatePicker"
        android:visibility="invisible"/>

    <Spinner
        android:id="@+id/TimeReservationChoice"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:padding="5dp"
        android:background="@drawable/bg_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeReservation"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/Back"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="onClickBack"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TimeReservationChoice" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSubmit"
        android:text="@string/Submit"
        app:layout_constraintEnd_toEndOf="@+id/TimeReservationChoice"
        app:layout_constraintTop_toTopOf="@+id/Back" />

    <TextView
        android:id="@+id/SubmitResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Submit" />

</androidx.constraintlayout.widget.ConstraintLayout>